# nexusmods-tracker

./: .env.example  .gitignore  PROMPT.md  README.md  pyproject.toml  start.sh
backend/: .gitignore  database.py  downloader.py  main.py  models.py  nexusmods_client.py  run.sh
backend/routers/: downloads.py  local_files.py  mods.py  nexusmods_api.py  updates.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/local-files/: page.tsx
frontend/src/app/mods/: page.tsx
frontend/src/app/mods/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: quick-actions.tsx  recent-updates.tsx  stats-card.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/local-files/: file-list.tsx  map-file-dialog.tsx
frontend/src/components/mods/: add-mod-dialog.tsx  mod-table.tsx  update-badge.tsx
frontend/src/hooks/: use-local-files.ts  use-mods.ts  use-updates.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
